# hnscc-time-multimodal

./: Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore  README.md  manifest.yaml
data/pmc10571229/: rois_manifest.tsv
docs/: architecture.md  what-is-out-of-scope.md
docs/release-notes/: v0.3.md  v0.4.md  v0.5.md
scripts/: README.md  deconv_markers.R  download_pmc10571229.sh  download_tcga_hnsc.sh  run_lab.sh
src/hnscc_time/: __init__.py  audit.py  calibrate.py  canary.py  cohort.py  deconv_r.py  genomics.py  hpv.py  ihc.py  pipeline.py  time_schema.py
tests/: test_calibrate.py  test_canary.py  test_cohort.py  test_deconv_r.py  test_genomics.py  test_hpv.py  test_ihc.py  test_manifest.py  test_pipeline.py  test_time_schema.py
