[project]
name = "hnscc-time-multimodal"
version = "0.5.0"
description = "Capability-portrait scaffold for bioinformatics R&D repos."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "H. Ryan Kim" },
]
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "mlflow>=2.11.0",
    "ipykernel>=6.29.0",
    "nbconvert>=7.16.0",
    "jupyter>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    # Arm 4 (HPV± survival): Kaplan-Meier / log-rank / Cox. lifelines pulls
    # matplotlib, which the KM plot uses.
    "lifelines>=0.27.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]
# Arm 1 (IHC) needs Cellpose + scikit-image. Heavy install (pulls torch);
# opt-in so the genomics-only path stays slim.
ihc = [
    "cellpose>=3.0.0",
    "scikit-image>=0.22.0",
    "tifffile>=2024.1.0",
    "pillow>=10.0.0",
]

[project.scripts]
hnscc_time = "hnscc_time.pipeline:cli"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hnscc_time"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Polish-Phase5 lesson from P2 v0.1: tests use `pytest.importorskip` before
# importing optional-dependency modules, which forces module-level imports
# below a statement. Skip E402 in test files so the importorskip pattern
# doesn't need # noqa boilerplate on every line.
"tests/test_*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]   # run tests from a fresh clone (no editable install needed)
